# DominionAI

./: requirement.txt
DominionAI/src/Dominion/card/cardlist/: action_card.py
src/: main.py  preTraining.py  setup.cfg  training.py
src/DQN/: DQN.py  DQN_Memory.py
src/Dominion/: dominion.py  dominion_forTrain.py  player.py  strategy.py
src/Dominion/card/: card_factory.py
src/Dominion/card/cardlist/: action_card.py  card.py  money_card.py  victory_card.py
src/Dominion/operation/: deck_operation.py
src/Dominion/process/: buy.py  clean_up.py  game_end.py  game_start.py  play.py
src/Utils/: myFunction.py
test/Dominion/cardlist/: action_card_test.py  action_card_test_old.py
test/Dominion/operation/: deck_operation_test.py
test/Dominion/process/: game_end_test.txt  game_start_test.txt
test/cardlist/: action_card_test.py
test/process/: buy_test.txt  clean_up_test.txt  play_test.txt
