[metadata]
name = dominion
version = 0.0.1
description = dominion ai
keywords = 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  Dominion/dominion.py
  Dominion/dominion_forTrain.py
  Dominion/player.py
  Dominion/strategy.py
  Dominion/card/card_factory.py
  Dominion/card/cardlist/action_card.py
  Dominion/card/cardlist/card.py
  Dominion/card/cardlist/money_card.py
  Dominion/card/cardlist/victory_card.py
  DQN/DQN.py
  DQN/DQN_memory.py
  Utils/myFunction.py
install_requires =
  numpy

[options.extras_require]
dev = 
  flake8
  pytest